--- a/Contact me.html
+++ b/Contact me.html
@@ -10,7 +10,7 @@
   <p>07958714993</p>
   <p>louisa.nicoll@icloud.com</p>
   <hr>
-  <form action="mailto:louisa.nicoll@icloud.com" method="post">
+  <form action="mailto:louisa.nicoll@icloud.com" method="post" enctype="text/plain">
     <label>Your Name</label><br>
     <input type="text" name="" value=""><br><br>
     <label>Email</label><br>
