--- a/Contact me.html
+++ b/Contact me.html
@@ -12,11 +12,11 @@
   <hr>
   <form action="mailto:louisa.nicoll@icloud.com" method="post" enctype="text/plain">
     <label>Your Name</label><br>
-    <input type="text" name="" value=""><br><br>
+    <input type="text" name="Name" value=""><br><br>
     <label>Email</label><br>
-    <input type="email" name="" value=""><br><br>
+    <input type="email" name="Email" value=""><br><br>
     <label>Your Message</label><br>
-    <textarea name="name" rows="10" cols="30"></textarea><br>
+    <textarea name="Message" rows="10" cols="30"></textarea><br>
     <input type="submit" name="" value="Send">
   </form>
  </body>
